// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notification item render 1`] = `
<WithTheme(Slide)
  direction="up"
  in={true}
  mountOnEnter={true}
  unmountOnExit={true}
>
  <styled.li
    type="error"
  >
    <styled.div>
      <pure(Error) />
      <styled.div>
        <CloseButton
          onClick={[Function]}
        />
      </styled.div>
    </styled.div>
    <div />
  </styled.li>
</WithTheme(Slide)>
`;

exports[`Notification item styled components NotificationItemWrapper 1`] = `
<styled.li>
  <li
    className="sc-bwzfXH cTRMmO"
  >
    Anything
  </li>
</styled.li>
`;

exports[`Notification item styled components TopLine 1`] = `
<styled.div>
  <div
    className="sc-htpNat laVTDq"
  >
    Anything
  </div>
</styled.div>
`;

exports[`Notification item styled components WrapperCloseButton 1`] = `
<styled.div>
  <div
    className="sc-bxivhb gJaspy"
  >
    Anything
  </div>
</styled.div>
`;
